# blossom

./: .gitignore  CLAUDE.md  ai-dev-guide.md  blossom-schema.sql  mvp_technical_plan.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/src/: auth.py  config.py  main.py
apps/api/src/db/: supabase.py
apps/api/src/models/: schemas.py
apps/api/src/routes/: conversations.py  health.py  messages.py  spaces.py
apps/api/src/services/: conversations.py  messages.py  spaces.py  tutor.py
apps/api/tests/: conftest.py
apps/api/tests/routes/: test_health.py  test_messages.py
apps/api/tests/services/: test_spaces.py  test_tutor.py
apps/web/: package.json
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(main)/: layout.tsx
apps/web/src/app/(main)/spaces/: page.tsx
apps/web/src/app/(main)/spaces/[id]/chat/: page.tsx
apps/web/src/app/(main)/spaces/new/: page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/components/chat/: chat-message.tsx  quiz-block.tsx
apps/web/src/hooks/: use-auth.ts
apps/web/src/lib/: api.ts
apps/web/src/lib/supabase/: middleware.ts
docs/: blossom-ai-architecture.md  current-v0-mvp.md
supabase/migrations/: 001_initial_schema.sql
